# paper2md

./: .gitignore  README.md  README_zh-CN.md  pyproject.toml  test_pipeline.py
src/paper2md/: __init__.py  models.py  pipeline.py  server.py
src/paper2md/mineru/: __init__.py  client.py  local.py
src/paper2md/sources/: __init__.py  arxiv.py  base.py  europe_pmc.py  jats_parser.py  nature.py  pdf.py  registry.py
src/paper2md/storage/: __init__.py
