[project]
authors = [{name = "paper2md"}]
description = "MCP tool for converting academic papers to clean, low-noise Markdown format"
keywords = ["mcp", "paper", "markdown", "academic", "pdf", "mineru"]
license = {text = "MIT"}
name = "paper2md-mcp"
readme = "README.md"
requires-python = ">=3.11"
version = "1.0.0"

dependencies = [
  "mcp>=1.0.0",
  "httpx>=0.27.0",
  "beautifulsoup4>=4.12.0",
  "lxml>=5.0.0",
  "markdownify>=0.4.0",
  "Pillow>=10.0.0",
  "python-dotenv>=1.0.0",
  "arxiv>=2.1.0",
]

[project.optional-dependencies]
local-mineru = [
  "mineru[all]>=3.4.0",
]

[project.scripts]
paper2md = "paper2md.server:main"

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=75.0", "wheel"]

[tool.setuptools.packages.find]
where = ["src"]
